Bug Fixed: Navbar items overflowing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,8 +23,17 @@
   z-index: 99999999; /* so that it stays on top of all other elements */
 }
 
+.navbar-list{
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
 .navbar-item {
   cursor: pointer;
+  padding: none;
+  font-size: 15px;
 }
 
 .form-label {
@@ -488,16 +497,10 @@ body {
   overflow-y: scroll;
 }
 
-.navbar-list {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+/* .navbar-item:nth-child(9) .navbar-link {
+  margin-right: 5px;
+}*/
 
-  margin-block-end: 10px;
-}
-.navbar-item:nth-child(9) .navbar-link {
-  margin-right: 35px;
-}
 /* @media (min-width:641px)  { 
   .navbar-list{
     flex-direction: column;
@@ -1749,7 +1752,9 @@ input[type="submit"]:hover {
   .navbar-list {
     margin-block-end: 0;
     display: flex;
-    gap: 15px;
+    gap: 12px;
+    align-items: center;
+    text-align: center;
   }
 
   .switch-container {
